--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.CocinaApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.MainActivity2"
+            android:exported="false"
+            android:theme="@style/Theme.CocinaApp" />
+        <activity
             android:name=".ui.view.ViewProfileActivity"
             android:exported="false" />
         <activity
